整理包引用

--- a/Client/Directory.Build.props
+++ b/Client/Directory.Build.props
@@ -1,4 +1,4 @@
-﻿<Project>
+<Project>
     <PropertyGroup>
         <!-- 解决方案右键菜单 - 设置框架，修改后自动重新加载，快、方便 -->
         <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-windows10.0.19041;net9.0-desktop;net9.0-browserwasm</TargetFrameworks>
