--- a/Client/References.props
+++ b/Client/References.props
@@ -43,9 +43,8 @@
 
     <!-- 非WinAppSdk引用 -->
     <ItemGroup Condition="!$(IsWinAppSdk)">
-        <PackageReference Include="Uno.WinUI" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.Graphics2DSK" Version="$(UnoVersion)" />
-        <!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
+        <PackageReference Include="Uno.WinUI" Version="$(UnoVersion)" PrivateAssets="none" />
+        <!-- 对应CommunityToolkit.WinUI.Lottie库，内部引用SkiaSharp包实现LottieVisualSource -->
         <PackageReference Include="Uno.WinUI.Lottie" Version="$(UnoVersion)" />
         <!-- ScottPlot Lottie都引用，注意版本匹配 -->
         <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="3.119.0" />
@@ -58,12 +57,11 @@
         <PackageReference Include="Square.OkHttp3" Version="4.12.0.9" />
         <!-- WorkManager后台任务引用 -->
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.9.0.5" />
-        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
     </ItemGroup>
 
     <!-- IOS -->
     <ItemGroup Condition="$(IsIOS)">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="$(UnoVersion)" />
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="build" />
     </ItemGroup>
 
     <!-- Wasm -->
@@ -81,20 +79,4 @@
         <!-- UseMauiEssentials已无用，间接引用 Microsoft.Graphics.Win2D 的版本对CommunityToolkit.WinUI.Lottie有影响，需1.2.0以上版本 -->
         <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.61" />
     </ItemGroup>
-
-    <!-- 引用控制
-    IncludeAssets：使用包或项目的哪些资产，默认 all
-    ExcludeAssets：排除使用包或项目的哪些资产，默认 none
-    PrivateAssets：将使用这些资产，但它们不会流入上级项目，默认 contentfiles;analyzers;build
-    
-    PrivateAssets="none"
-	用在 PackageReference 时，上级项目的包被更高级项目引用时，所有资产都会流入更高级项目
-    如打包Dt.Client时，若引用的Uno.WinUI包PrivateAssets="none"，Uno.WinUI包的所有资产都会流入引用Dt.Client包的项目
-	
-	PrivateAssets="all"
-	用在 ProjectReference 时，避免打包上级项目时引用该项目的nuget包
-	如打包Dt.Client时，引用Dt.Core、Dt.Base项目时设置PrivateAssets="all"，Dt.Client包就不会引用Dt.Core、Dt.Base的nuget包
-                   
-    所有选项：contentfiles analyzers build compile runtime buildTransitive native none all
-    -->
 </Project>
