--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -61,6 +61,10 @@
 		<Compile Include="..\..\Service\src\Dt.Core\Rpc\Client\Rpc\UnaryRpc.cs" Link="Rpc\Client\UnaryRpc.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Rpc\RpcKit.cs" Link="Rpc\RpcKit.cs" />
 	</ItemGroup>
+
+    <ItemGroup Condition="exists('..\..\..\Tools\File\TestProgressStream.cs')">
+        <Compile Include="..\..\..\Tools\File\TestProgressStream.cs" Link="Rpc\Handler\TestProgressStream.cs" />
+    </ItemGroup>
     
 	<ItemGroup>
 		<None Include="..\..\Service\src\Dt.Core\Internal\Serialize\JsonRpc结构.txt" Link="Internal\Serialize\JsonRpc结构.txt" />
