<IsDtClient>true</IsDtClient>

--- a/Client/Dt.Client.targets
+++ b/Client/Dt.Client.targets
@@ -1,5 +1,6 @@
 ﻿<Project>
     <PropertyGroup>
+        <IsDtClient>true</IsDtClient>
         <UnoVersion>6.0.704</UnoVersion>
     </PropertyGroup>
     
