--- a/Demo/Demo/Assets/Config.json
+++ b/Demo/Demo/Assets/Config.json
@@ -24,5 +24,8 @@
       "ConnStr": "Host=10.10.1.2;Port=5432;Database=dt;Username=dt;Password=dt;",
       "DbType": "postgresql"
     }
-  }
+  },
+
+  // Wasm服务地址，因浏览器内访问https时证书无效不访问，证书已安装可以和Server相同
+  "WasmServer": "http://10.10.1.16:9999"
 }
