--- a/Demo/Demo/Platforms/iOS/Info.plist
+++ b/Demo/Demo/Platforms/iOS/Info.plist
@@ -1,43 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
+<dict>
+	<key>CFBundleIdentifier</key>
+	<string>com.dt.demo</string>
+	<key>CFBundleDisplayName</key>
+	<string>搬运工</string>
+	<key>CFBundleShortVersionString</key>
+	<string>4.5.3</string>
+	<key>CFBundleVersion</key>
+	<string>22.10.16</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>MinimumOSVersion</key>
+	<string>10.0</string>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+	</array>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>arm64</string>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Picture Picker uses photo library</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Assets/Fonts/HarmonySans.ttf</string>
+		<string>Assets/Fonts/icon.ttf</string>
+		<string>Assets/Fonts/uno-fluentui-assets.ttf</string>
+	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请求使用麦克风进行录音</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请求使用摄像头进行拍照</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>China</string>
+	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>LSRequiresIPhoneOS</key>
+		<key>NSAllowsArbitraryLoads</key>
 		<true/>
-		<key>UIDeviceFamily</key>
-		<array>
-			<integer>1</integer>
-			<integer>2</integer>
-		</array>
-		<key>UIRequiredDeviceCapabilities</key>
-		<array>
-			<string>armv7</string>
-			<string>arm64</string>
-		</array>
-		<key>UISupportedInterfaceOrientations</key>
-		<array>
-			<string>UIInterfaceOrientationPortrait</string>
-			<string>UIInterfaceOrientationLandscapeLeft</string>
-			<string>UIInterfaceOrientationLandscapeRight</string>
-		</array>
-		<key>UISupportedInterfaceOrientations~ipad</key>
-		<array>
-			<string>UIInterfaceOrientationPortrait</string>
-			<string>UIInterfaceOrientationPortraitUpsideDown</string>
-			<string>UIInterfaceOrientationLandscapeLeft</string>
-			<string>UIInterfaceOrientationLandscapeRight</string>
-		</array>
-		<key>UIViewControllerBasedStatusBarAppearance</key>
-		<false/>
-		<key>XSAppIconAssets</key>
-		<string>Assets.xcassets/icon.appiconset</string>
-		<key>UIApplicationSupportsIndirectInputEvents</key>
-		<true/>
-
-		<!--
-		Adjust this to your application's encryption usage.
-		<key>ITSAppUsesNonExemptEncryption</key>
-		<false/>
-		-->
 	</dict>
+    <!--接收分享-->
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>public.data</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.data</string>
+				<string>public.content</string>
+			</array>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+	</array>
+    <!--后台模式-->
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
+    <!--后台任务标识，代码中注册和请求时一致-->
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>Dt.Core.BgJob</string>
+    </array>
+</dict>
 </plist>
