删除ILogSetting，将注入方式转为在Config.json中设置

--- a/Demo/Demo/Assets/Config.json
+++ b/Demo/Demo/Assets/Config.json
@@ -27,5 +27,16 @@
   },
 
   // Wasm服务地址，因浏览器内访问https时证书无效不访问，证书已安装可以和Server相同
-  "WasmServer": "http://10.10.1.16:9999"
+  "WasmServer": "http://10.10.1.16:9999",
+
+  // 日志设置
+  //"LogSetting": {
+  //  "MinimumLevel": "Debug",
+  //  "ConsoleEnabled": true,
+  //  "ConsoleLogLevel": "Debug",
+  //  "FileEnabled": true,
+  //  "FileLogLevel": "Debug",
+  //  "TraceEnabled": true,
+  //  "TraceLogLevel": "Debug"
+  //}
 }
