--- a/Client/References.props
+++ b/Client/References.props
@@ -14,6 +14,7 @@
         <PackageReference Include="Serilog" Version="4.3.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
+        <PackageReference Include="Serilog.Extensions.ElapsedTime" Version="2.0.0" />
         
         <!-- Db相关，两端版本相同 -->
         <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.6" />
