--- a/Service/src/References.props
+++ b/Service/src/References.props
@@ -13,6 +13,7 @@
 		<PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+		<PackageReference Include="Serilog.Extensions.ElapsedTime" Version="2.0.0" />
 		
 		<!-- Db相关，两端版本相同 -->
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.6" />
