--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -13,13 +13,13 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <UnoVersion>6.0.704</UnoVersion>
+        <UnoVersion>6.2.58</UnoVersion>
     </PropertyGroup>
         
     <!-- WinAppSdk -->
     <ItemGroup Condition="$(IsWinAppSdk)">
-        <!-- 1.7版本主线程异步异常会崩溃 -->
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.250602001" />
+        <!-- 1.7版本主线程异步异常会崩溃、后台任务全新方式；1.6不崩溃但原Dt.Tasks无法运行 -->
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4188" />
         <!-- Microsoft.WindowsAppSDK内部引用，排除runtime，否则打包时必须包含 native\WebView2Loader.dll -->
         <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3296.44" ExcludeAssets="runtime" />
@@ -44,7 +44,6 @@
     <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'true'">
         <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="$(UnoVersion)" />
         <PackageReference Include="Xamarin.Google.Android.Material" Version="1.10.0.2" />
-        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
     </ItemGroup>
 
     <!-- IOS -->
@@ -64,12 +63,9 @@
     <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'true'">
         <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="$(UnoVersion)" />
         <PackageReference Include="Uno.Wasm.Bootstrap" Version="9.0.16" />
-        <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="9.0.16" />
         <PackageReference Include="Uno.WinUI.Runtime.WebAssembly" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="none" ExcludeAssets="all" />
         <!-- 不引用link出错 -->
         <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.15" />
-        <!-- 不引用启动出错 -->
-        <PackageReference Include="Uno.UI.HotDesign" Version="1.11.182"  />
     </ItemGroup>
 
     <!-- Desktop -->
