--- a/Service/src/References.props
+++ b/Service/src/References.props
@@ -1,13 +1,17 @@
 ﻿<Project>
 	<ItemGroup>
+		<!-- 依赖注入DI -->
 		<PackageReference Include="Autofac" Version="8.4.0" />
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
 		<PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
+		<!-- 面向切面编程AOP -->
 		<PackageReference Include="Castle.Core" Version="5.2.1" />
+		<!-- 异步锁 -->
 		<PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
-		<PackageReference Include="Polly" Version="8.2.0" />
-		<PackageReference Include="RabbitMQ.Client" Version="6.7.0" />
-		<PackageReference Include="StackExchange.Redis" Version="2.7.4" />
+		<!-- 多次重试间隔时间可变 -->
+		<PackageReference Include="Polly" Version="8.6.3" />
+		<PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+		<PackageReference Include="StackExchange.Redis" Version="2.9.11" />
 		
 		<!-- 日志，两端版本相同 -->
 		<PackageReference Include="Serilog" Version="4.3.0" />
