--- a/Service/src/Fsm/Fsm.csproj
+++ b/Service/src/Fsm/Fsm.csproj
@@ -7,6 +7,9 @@
 		<Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<Content Include="..\Cm\etc\config\logger.json" Link="etc\config\logger.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
