--- a/Service/src/Cos/Properties/launchSettings.json
+++ b/Service/src/Cos/Properties/launchSettings.json
@@ -7,7 +7,7 @@
     }
   },
   "profiles": {
-    "Cosm": {
+    "Cos": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": ".admin",
