增加空服务支持

--- a/Service/src/Dt.Service/Dt.Service.csproj
+++ b/Service/src/Dt.Service/Dt.Service.csproj
@@ -2,15 +2,24 @@
 
 	<Import Project="..\..\..\..\Tools\File\ServicePkg.props" Condition="exists('..\..\..\..\Tools\File\ServicePkg.props')" />
 	
-	<ItemGroup>
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
 		<!--PrivateAssets避免引用项目的 nuget 包-->
-		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.App\Dt.App.csproj" PrivateAssets="all" />
 	</ItemGroup>
 
+	<!-- 开发时项目引用不屏蔽 -->
+	<ItemGroup Condition="'$(Configuration)' != 'Release'">
+		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" />
+		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" />
+		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" />
+		<ProjectReference Include="..\Dt.App\Dt.App.csproj" />
+	</ItemGroup>
+	
 	<Import Project="..\References.props" />
 
 </Project>
