--- a/Service/src/Cos/Cos.csproj
+++ b/Service/src/Cos/Cos.csproj
@@ -1,15 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-	
 	<ItemGroup>
-		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" />
-		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
-		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" />
-		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" />
-		<ProjectReference Include="..\Dt.App\Dt.App.csproj" />
+		<ProjectReference Include="..\Dt.Service\Dt.Service.csproj" />
 	</ItemGroup>
-
-	<!--<ItemGroup>
-	  <PackageReference Include="Dt.Service" Version="5.0.0" />
-	</ItemGroup>-->
-
 </Project>
