--- a/Service/src/Dt.Service/Dt.Service.csproj
+++ b/Service/src/Dt.Service/Dt.Service.csproj
@@ -5,6 +5,7 @@
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
 		<!--PrivateAssets避免引用项目的 nuget 包-->
 		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Da\Dt.Da.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" PrivateAssets="all" />
@@ -14,6 +15,7 @@
 	<!-- 开发时项目引用不屏蔽 -->
 	<ItemGroup Condition="'$(Configuration)' != 'Release'">
 		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+		<ProjectReference Include="..\Dt.Da\Dt.Da.csproj" />
 		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" />
 		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" />
 		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" />
