--- a/Demo/Demo/Demo.csproj
+++ b/Demo/Demo/Demo.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Dt.Sdk">
 	<PropertyGroup>
 		<IsExe>true</IsExe>
-		
+
 		<!-- 主题颜色，无#前缀，logo图标、启动页背景色 -->
 		<ThemeColor>1BA1E2</ThemeColor>
-		
+
 		<!-- WinAppSdk时和Package.appxmanifest模板生成AppxManifest.xml -->
 		<ApplicationTitle>搬运工</ApplicationTitle>
 		<ApplicationId>dt.Demo</ApplicationId>
@@ -12,10 +12,30 @@
 		<ApplicationVersion>1</ApplicationVersion>
 		<ApplicationPublisher>Daoting</ApplicationPublisher>
 		<Description>搬运工样例.</Description>
-		
+	</PropertyGroup>
+
+	<PropertyGroup Condition="$(IsWinAppSdk) AND '$(Configuration)' == 'Release'">
 		<!-- WinAppSdk发布，Platforms\Windows\Dt_Client.pfx -->
 		<PackageCertificateThumbprint>1B239CAC27A596A7E21D79DB0C279D17CA2D5798</PackageCertificateThumbprint>
 		<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="$(IsAndroid) AND '$(Configuration)' == 'Release'">
+		<!-- 包格式apk，不生成aab -->
+		<AndroidPackageFormat>apk</AndroidPackageFormat>
+		<!-- apk支持的ABI架构，默认支持4种架构，减少支持ABI能缩小apk -->
+		<RuntimeIdentifier>android-arm64</RuntimeIdentifier>
+		<!--<RuntimeIdentifier>android-x64</RuntimeIdentifier>-->
+		<!--<RuntimeIdentifiers>android-arm64;android-arm</RuntimeIdentifiers>-->
+		<!-- 签名相关 -->
+		<AndroidKeyStore>True</AndroidKeyStore>
+		<AndroidSigningKeyStore>Platforms\Android\app.keystore</AndroidSigningKeyStore>
+		<AndroidSigningKeyAlias>key</AndroidSigningKeyAlias>
+		<AndroidSigningKeyPass>111111</AndroidSigningKeyPass>
+		<AndroidSigningStorePass>111111</AndroidSigningStorePass>
+		<!-- 取消AOT，因引用包不支持裁剪 -->
+		<RunAOTCompilation>false</RunAOTCompilation>
+		<PublishTrimmed>false</PublishTrimmed>
 	</PropertyGroup>
 
 	<ItemGroup>
