--- a/Demo/Directory.Build.props
+++ b/Demo/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
 	<PropertyGroup>
 		<!-- 解决方案右键菜单 - 设置框架，修改后自动重新加载，快、方便 -->
-		<TargetFrameworks>net9.0-browserwasm</TargetFrameworks>
+		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-windows10.0.19041;net9.0-desktop;net9.0-browserwasm</TargetFrameworks>
 
 		<!-- 启用全局using -->
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -25,7 +25,7 @@
 
 	<!-- 所有项目引用 -->
 	<ItemGroup Condition="$(SolutionName) == 'Demo'">
-		<PackageReference Include="Dt.Client" Version="5.0.0" />
+		<PackageReference Include="Dt.Client" Version="5.1.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(SolutionName) != 'Demo'">
