--- a/Demo/Demo/Platforms/Android/AndroidManifest.xml
+++ b/Demo/Demo/Platforms/Android/AndroidManifest.xml
@@ -3,7 +3,7 @@
 		  android:versionCode="10"
           android:versionName="5.0.0"
           package="com.dt.demo"
-          android:installLocation="auto">>
+          android:installLocation="auto">
   <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
