--- a/Client/Dt.Client.targets
+++ b/Client/Dt.Client.targets
@@ -1,88 +1,3 @@
 ﻿<Project>
-    <PropertyGroup>
-        <IsDtClient>true</IsDtClient>
-        <UnoVersion>6.2.58</UnoVersion>
-    </PropertyGroup>
-
-    <!-- Android -->
-    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) != 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="build" />
-    </ItemGroup>
-    
-    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="$(UnoVersion)" />
-        <PackageReference Include="Xamarin.Google.Android.Material" Version="1.10.0.2" />
-    </ItemGroup>
-
-    <!-- IOS -->
-    <ItemGroup Condition="$(IsIOS) AND $(IsExe) != 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="build" />
-    </ItemGroup>
-    
-    <ItemGroup Condition="$(IsIOS) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="$(UnoVersion)" />
-    </ItemGroup>
-
-    <!-- Wasm -->
-    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) != 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="build" />
-    </ItemGroup>
-    
-    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.Wasm.Bootstrap" Version="9.0.16" />
-        <PackageReference Include="Uno.WinUI.Runtime.WebAssembly" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="none" ExcludeAssets="all" />
-        <!-- 不引用link出错 -->
-        <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.15" />
-    </ItemGroup>
-
-    <!-- Desktop -->
-    <ItemGroup Condition="$(IsDesktop)">
-        <PackageReference Include="Uno.WinUI.MediaPlayer.Skia.Win32" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.MediaPlayer.Skia.X11" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.WebView.Skia.X11" Version="$(UnoVersion)" />
-        <!-- CoreWebView2同时存在于 Microsoft.Web.WebView2.Core 和 Uno.UI 中，Dt.Sdk中使用别名 -->
-        <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3240.44" Aliases="mswebview2" />
-        <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.21" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Linux.FrameBuffer" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.MacOS" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Win32" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Wpf" Version="$(UnoVersion)" />
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.X11" Version="$(UnoVersion)" />
-
-        <!-- Enable WPF Hardware acceleration over RDP, only if not specified by the project -->
-        <RuntimeHostConfigurationOption
-				Include="Switch.System.Windows.Media.EnableHardwareAccelerationInRdp"
-				Value="true"
-				Exclude="@(RuntimeHostConfigurationOption)" />
-    </ItemGroup>
-
-    <!-- exe项目debug时复制dt的pdb文件，确保可使用github源码调试dt包 -->
-    <ItemGroup Condition="'$(Configuration)'=='Debug' AND $(IsExe) == 'true' AND $(IsWinAppSdk)">
-        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)../lib/net9.0-windows10.0.19041/*.pdb" />
-    </ItemGroup>
-    
-    <ItemGroup Condition="'$(Configuration)'=='Debug' AND $(IsExe) == 'true' AND $(IsAndroid)">
-        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)../lib/net9.0-android35.0/*.pdb" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(Configuration)'=='Debug' AND $(IsExe) == 'true' AND $(IsIOS)">
-        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)../lib/net9.0-ios18.0/*.pdb" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(Configuration)'=='Debug' AND $(IsExe) == 'true' AND $(IsBrowserWasm)">
-        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)../lib/net9.0-browserwasm1.0/*.pdb" />
-    </ItemGroup>
-    
-    <ItemGroup Condition="'$(Configuration)'=='Debug' AND $(IsExe) == 'true' AND $(IsDesktop)">
-        <ReferenceCopyLocalPaths Include="$(MSBuildThisFileDirectory)../lib/net9.0-desktop1.0/*.pdb" />
-    </ItemGroup>
-
-    <PropertyGroup Condition="'$(Configuration)'=='Debug' AND $(IsWinAppSdk) AND $(IsExe) == 'true'">
-        <!-- 将输出目录的pdb文件复制到Appx，默认不复制，只WinUI有效 -->
-        <AppxPackageIncludePrivateSymbols>true</AppxPackageIncludePrivateSymbols>
-    </PropertyGroup>
+    <!-- 通过本文件引用包debug时正常，发布时出错，改为放在 DtRef.targets，通过Dt.Sdk导入 -->
 </Project>
