--- a/Demo/Demo/Demo.csproj
+++ b/Demo/Demo/Demo.csproj
@@ -26,7 +26,8 @@
 		<ProjectReference Include="..\Demo.Lob\Demo.Lob.csproj" />
 	</ItemGroup>
 
-	<Target Name="CheckPlatform" BeforeTargets="BeforeBuild">
+	<!-- 测试属性值 -->
+	<!--<Target Name="CheckPlatform" BeforeTargets="BeforeBuild">
 		<Message Text="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')): $(_NugetDirectory)" Importance="high" />
-	</Target>
+	</Target>-->
 </Project>
