wasm的InvokeJS方法，升级为JSImport/JSExport 标签方式

--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -1,4 +1,9 @@
 ﻿<Project Sdk="Dt.Sdk">
+    <PropertyGroup Condition="$(IsBrowserWasm) == 'true'">
+        <!-- JSImport/JSExport 标签需要 -->
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
+    
 	<ItemGroup>
 		<Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Dict.cs" Link="Base\Collection\Dict.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Table\Cell.cs" Link="Base\Collection\Table\Cell.cs" />
